--- a/index.html
+++ b/index.html
@@ -1,122 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Enquiry Form</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
     <script>
-      (function () {
-        emailjs.init("4DoV0lcBezt6RXB-N"); // Replace with your EmailJS public key
-      })();
+        (function () {
+            emailjs.init("4DoV0lcBezt6RXB-N"); // Replace with your EmailJS public key
+        })();
     </script>
-  </head>
-  <body class="bg-gray-100 flex items-center justify-center min-h-screen">
+</head>
+
+<body class="bg-gray-100 flex items-center justify-center min-h-screen">
     <div class="bg-white shadow-lg rounded-xl p-8 w-full max-w-lg space-y-4">
-      
-      <!-- Header Section -->
-      <div class="flex justify-between items-start mb-4">
-        <div>
-          <h2 class="text-4xl font-extrabold text-red-600">ENLIGHT GROUP OF INSTITUTIONS</h2>
-          <p class="text-sm text-gray-700 mt-2">
-            Recognised by the Govt. of Karnataka and Affiliated to KSNC, KSDNEB, Paramedical Board & INC New Delhi<br />
-            Reg. Address: Pipe Line Road, Magadi Main Road, Vishwaneedam Post, Bangalore, Karnataka<br />
-            82/17, Tavarekere Village, Bangalore South Taluk, Karnataka - 562130
-          </p>
-        </div>
-        <div class="w-40 h-20 rounded-full bg-cover bg-center border-2 border-red-300 shadow-lg"
-          style="background-image: url('bgimage.jpeg');"></div>
-      </div>
 
-      <h2 class="text-2xl font-bold text-red-600 text-center">Enquiry Form</h2>
-
-      <!-- Success/Error Message -->
-      <div id="message" class="text-center text-sm font-medium"></div>
-
-      <form id="enquiryForm" class="space-y-4">
-        <!-- Name -->
-        <div>
-          <label for="name" class="block font-semibold text-gray-700">Name <span class="text-red-500">*</span></label>
-          <input type="text" id="name" name="name" required pattern="[A-Za-z ]+"
-            class="w-full mt-1 px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500" />
+        <!-- Header Section -->
+        <div class="flex justify-between items-start mb-4">
+            <div>
+                <h2 class="text-4xl font-extrabold text-red-600">ENLIGHT GROUP OF INSTITUTIONS</h2>
+                <p class="text-sm text-gray-700 mt-2">
+                    Recognised by the Govt. of Karnataka and Affiliated to KSNC, KSDNEB, Paramedical Board & INC New
+                    Delhi<br />
+                    Reg. Address: Pipe Line Road, Magadi Main Road, Vishwaneedam Post, Bangalore, Karnataka<br />
+                    82/17, Tavarekere Village, Bangalore South Taluk, Karnataka - 562130
+                </p>
+            </div>
+            <div class="w-40 h-20 rounded-full bg-cover bg-center border-2 border-red-300 shadow-lg"
+                style="background-image: url('bgimage.jpeg');"></div>
         </div>
 
-        <!-- Contact Number -->
-        <div>
-          <label for="contact" class="block font-semibold text-gray-700">Contact Number <span class="text-red-500">*</span></label>
-          <input type="tel" id="contact" name="contact" required pattern="[0-9]{10}"
-            class="w-full mt-1 px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500" />
-        </div>
+        <h2 class="text-2xl font-bold text-red-600 text-center">Enquiry Form</h2>
 
-        <!-- Email ID -->
-        <div>
-          <label for="email" class="block font-semibold text-gray-700">Email ID <span class="text-red-500">*</span></label>
-          <input type="email" id="email" name="email" required
-            class="w-full mt-1 px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500" />
-        </div>
+        <!-- Success/Error Message -->
+        <div id="message" class="text-center text-sm font-medium"></div>
 
-        <!-- Course Interested In (Dropdown) -->
-        <div>
-          <label for="course" class="block font-semibold text-gray-700">Course Interested In <span class="text-red-500">*</span></label>
-          <select id="course" name="course" class="border p-2 rounded w-full mt-1 focus:outline-none focus:ring-2 focus:ring-red-500" required>
-            <option value="">-- Select Course --</option>
-            <option value="Nursing">Nursing</option>
-            <option value="Pharmacy">Pharmacy</option>
-            <option value="Paramedical">Paramedical</option>
-            <option value="Allied Science">Allied Science</option>
-            <option value="Physiotherapy">Physiotherapy</option>
-          </select>
-        </div>
+        <form id="enquiryForm" class="space-y-4">
+            <!-- Name -->
+            <div>
+                <label for="name" class="block font-semibold text-gray-700">Name <span
+                        class="text-red-500">*</span></label>
+                <input type="text" id="name" name="name" required pattern="[A-Za-z ]+"
+                    class="w-full mt-1 px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500" />
+            </div>
 
-        <!-- Preferred Contact Method -->
-        <div>
-          <label for="contact_method" class="block font-semibold text-gray-700 mb-1">Preferred Contact Method <span class="text-red-500">*</span></label>
-          <select name="contact_method" id="contact_method" required
-            class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500">
-            <option value="">Select Method</option>
-            <option value="Call">Call</option>
-            <option value="Email">Email</option>
-            <option value="WhatsApp">WhatsApp</option>
-          </select>
-        </div>
+            <!-- Contact Number -->
+            <div>
+                <label for="contact" class="block font-semibold text-gray-700">Contact Number <span
+                        class="text-red-500">*</span></label>
+                <input type="tel" id="contact" name="contact" required pattern="[0-9]{10}"
+                    class="w-full mt-1 px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500" />
+            </div>
 
-        <!-- Submit Button -->
-        <div class="pt-4 text-center">
-          <button type="submit"
-            class="bg-red-600 hover:bg-red-700 text-white font-semibold py-2 px-6 rounded-lg transition duration-300">
-            Submit
-          </button>
-        </div>
-      </form>
+            <!-- Email ID -->
+            <div>
+                <label for="email" class="block font-semibold text-gray-700">Email ID <span
+                        class="text-red-500">*</span></label>
+                <input type="email" id="email" name="email" required
+                    class="w-full mt-1 px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500" />
+            </div>
+
+            <!-- Course Interested In (Dropdown) -->
+            <div>
+                <label for="course" class="block font-semibold text-gray-700">Course Interested In <span
+                        class="text-red-500">*</span></label>
+                <select id="course" name="course"
+                    class="border p-2 rounded w-full mt-1 focus:outline-none focus:ring-2 focus:ring-red-500" required>
+                    <option value="">-- Select Course --</option>
+                    <option value="Nursing">Nursing</option>
+                    <option value="Pharmacy">Pharmacy</option>
+                    <option value="Paramedical">Paramedical</option>
+                    <option value="Allied Science">Allied Science</option>
+                    <option value="Physiotherapy">Physiotherapy</option>
+                </select>
+            </div>
+
+            <!-- Preferred Contact Method -->
+            <div>
+                <label for="contact_method" class="block font-semibold text-gray-700 mb-1">Preferred Contact Method
+                    <span class="text-red-500">*</span></label>
+                <select name="contact_method" id="contact_method" required
+                    class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500">
+                    <option value="">Select Method</option>
+                    <option value="Call">Call</option>
+                    <option value="Email">Email</option>
+                    <option value="WhatsApp">WhatsApp</option>
+                </select>
+            </div>
+
+            <!-- Submit Button -->
+            <div class="pt-4 text-center">
+                <button type="submit"
+                    class="bg-red-600 hover:bg-red-700 text-white font-semibold py-2 px-6 rounded-lg transition duration-300">
+                    Submit
+                </button>
+            </div>
+
+            <!-- Footer -->
+            <div class="text-center text-sm text-gray-600 mt-6">
+                &copy; 2025 All rights reserved | Design and developed by <span class="font-semibold text-red-600">Nithin
+                    G</span>
+            </div>
+
+        </form>
     </div>
 
     <!-- Script -->
     <script>
-      document.getElementById('enquiryForm').addEventListener('submit', function (e) {
-        e.preventDefault();
+        document.getElementById('enquiryForm').addEventListener('submit', function (e) {
+            e.preventDefault();
 
-        const form = this;
-        const message = document.getElementById('message');
+            const form = this;
+            const message = document.getElementById('message');
 
-        if (!form.checkValidity()) {
-          message.textContent = 'Please fill out all required fields correctly.';
-          message.className = 'text-red-600 text-center mb-4';
-          return;
-        }
+            if (!form.checkValidity()) {
+                message.textContent = 'Please fill out all required fields correctly.';
+                message.className = 'text-red-600 text-center mb-4';
+                return;
+            }
 
-        emailjs.sendForm('service_5ih180k', 'template_5ylklnd', form)
-          .then(() => {
-            message.textContent = 'Enquiry submitted successfully!';
-            message.className = 'text-green-600 text-center mb-4';
-            form.reset();
-          })
-          .catch((error) => {
-            console.error('Submission failed:', error);
-            message.textContent = 'Submission failed. Please try again later.';
-            message.className = 'text-red-600 text-center mb-4';
-          });
-      });
+            emailjs.sendForm('service_5ih180k', 'template_5ylklnd', form)
+                .then(() => {
+                    message.textContent = 'Enquiry submitted successfully!';
+                    message.className = 'text-green-600 text-center mb-4';
+                    form.reset();
+                })
+                .catch((error) => {
+                    console.error('Submission failed:', error);
+                    message.textContent = 'Submission failed. Please try again later.';
+                    message.className = 'text-red-600 text-center mb-4';
+                });
+        });
     </script>
-  </body>
+</body>
+
 </html>
