updated the from with custom

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
     <script>
         (function () {
-            emailjs.init("4DoV0lcBezt6RXB-N"); // Replace with your EmailJS public key
+            emailjs.init("lR2dfoi59fNoEUM_P"); // Replace with your EmailJS public key
         })();
     </script>
 </head>
@@ -121,7 +121,7 @@
                 return;
             }
 
-            emailjs.sendForm('service_5ih180k', 'template_5ylklnd', form)
+            emailjs.sendForm('service_vcmw8nt', 'template_z50bvvq', form)
                 .then(() => {
                     message.textContent = 'Enquiry submitted successfully!';
                     message.className = 'text-green-600 text-center mb-4';
