updated the name

--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
 
             <!-- Footer -->
             <div class="text-center text-sm text-gray-600 mt-6">
-                &copy; 2025 All rights reserved | Design and developed by <span class="font-semibold text-red-600">Chethan KR & Nithin G
-                    G</span>
+                &copy; 2025 All rights reserved 
             </div>
 
         </form>
